--- a/terminal/alacritty.yml
+++ b/terminal/alacritty.yml
@@ -20,7 +20,7 @@ window:
   # (changes require restart)
   dimensions:
     columns: 80
-    lines: 24
+    lines: 32 # getting crazy 
 
   # Adds this many blank pixels of padding around the window
   # Units are physical pixels; this is not DPI aware.
