Added some stuff to .npmrc

--- a/npm/.npmrc
+++ b/npm/.npmrc
@@ -1,2 +1,15 @@
+# Directory structure
 prefix=/home/jesse/.npm/global
+
+# Package sourcing
+registry=https://registry.npmjs.com/
+
+# Output Settings
 depth=0
+loglevel=http
+
+# Init Settings
+init.author.name=Jesse Malinosky
+init.author.email=j2@jessemalinosky.com
+init.license=BSD-2-Clause
+init.version=0.0.1
