.npmrc should work as intended and not be user specific now.

--- a/npm/.npmrc
+++ b/npm/.npmrc
@@ -1,5 +1,5 @@
 # Directory structure
-prefix=/home/jesse/.npm/global
+prefix=~/.npm/global
 
 # Package sourcing
 registry=https://registry.npmjs.com/
