organized ubuntu.cfg somewhat

--- a/scripts/zsh/install/cfg/ubuntu.cfg
+++ b/scripts/zsh/install/cfg/ubuntu.cfg
@@ -1,7 +1,20 @@
-curl
-xclip
-megatools
+# Term
+alacritty
+
+# Dev
+nodejs
+openjdk-8-jdk
+
+## Dev/Build
+cmake
+
+## Dev/Lib
 build-essential
 libncurses-dev
 xutils-dev
-cmake
+
+# System Tools
+curl
+xclip
+megatools
+
