--- a/scripts/zsh/install/cfg/freebsd.cfg
+++ b/scripts/zsh/install/cfg/freebsd.cfg
@@ -1,5 +1,18 @@
+# Term 
+alacritty
+
+# Dev
+nodejs
+openjdk-8-jdk
+
+## Dev/Buld
+gradle
+  	# add jdk/node
+
+# Sys
+sudo
+
+## Sys/Tools
 curl
 xclip
 megatools
-sudo
-gradle
