bunch of pgp stuff

--- a/scripts/zsh/install/cfg/freebsd.cfg
+++ b/scripts/zsh/install/cfg/freebsd.cfg
@@ -1,13 +1,13 @@
+# Shell
+zsh
+
 # Term 
 alacritty
 
 # Dev
-nodejs
-openjdk-8-jdk
-
-## Dev/Buld
+node
+openjdk8
 gradle
-  	# add jdk/node
 
 # Sys
 sudo
