--- a/git/.gitconfig
+++ b/git/.gitconfig
@@ -1,6 +1,7 @@
 [user]
 	name = Jesse Malinosky
 	email = j2@jessemalinosky.com
+	signingkey = 4D69659628064BF6
 [color]
 	ui = auto
 [core]
@@ -8,3 +9,7 @@
 	pager = more
 [merge]
 	ff = yes
+[commit]
+	gpgsign = true
+[gpg]
+	program = gpg2
