--- a/terminal/alacritty.yml
+++ b/terminal/alacritty.yml
@@ -30,7 +30,7 @@ window:
     y: 16
 
   # Window decorations
-  decorations: false
+  decorations: true
 
 # Display tabs using this many cells (changes require restart)
 tabspaces: 4
