Add more packages
Still not sure which packs I want to be present on every install.
Gonna slowly append to this as stuff pops into my mind. None of the install scripts ( in the install directory ) use the os specific package lists yet.

--- a/scripts/zsh/install/cfg/freebsd.cfg
+++ b/scripts/zsh/install/cfg/freebsd.cfg
@@ -1,32 +1,40 @@
-# Shell
 zsh
-
-# Term 
 alacritty
-
-# Dev
 node
 openjdk8
 gradle
-
-# Gui
+gcc9-devel
+gccmakedep
+git
+gnupg
+gradle
 xorg
-
-# Browser
 firefox
 chromium
-
-# Editor
 vim
-
-# Sys
+keepassxc
+linux-c7-devtools
+llvm38
+mpv
+gnupg
 sudo
-
-## Sys/Tools
+python
+python2
+redis
+rubygem-travis
+webfonts
+xarchiver
+xclip
+xfce
+xfce4-whiskermenu-plugin
+sudo
+subversion
+thunar-archive-plugin
+portmaster
+postgresql10-client
+postgresql10-server
 curl
 xclip
 megatools
-
-# Sec
 openvpn
-gnupg
+bash
