--- a/terminal/alacritty-katana.yml
+++ b/terminal/alacritty-katana.yml
@@ -403,7 +403,7 @@ key_bindings:
   - { key: Down,     mods: Alt,     chars: "\x1b[1;3B"                   }
   - { key: Down,                    chars: "\x1b[B",   mode: ~AppCursor  }
   - { key: Down,                    chars: "\x1bOB",   mode: AppCursor   }
-  - { key: F1,                      chars: "\x1bOP"                      }
+  - { key: F1,                      action: ScrollPageUp                 }
   - { key: F2,                      chars: "\x1bOQ"                      }
   - { key: F3,                      chars: "\x1bOR"                      }
   - { key: F4,                      chars: "\x1bOS"                      }
