--- a/scripts/zsh/install/cfg/freebsd.cfg
+++ b/scripts/zsh/install/cfg/freebsd.cfg
@@ -5,7 +5,6 @@ gradle
 gcc9-devel
 gccmakedep
 git
-gnupg
 gradle
 xorg
 firefox
@@ -39,3 +38,12 @@ openvpn
 bash
 pkgconf
 alacritty
+tshark
+wget
+htop
+ImageMagick
+beadm
+cmake
+fusefs-ntfs
+fusefs-simple-ntfs
+subversion
