--- a/git/.gitconfig
+++ b/git/.gitconfig
@@ -1,7 +1,7 @@
 [user]
 	name = Jesse Malinosky
-	email = j2@jessemalinosky.com
-	signingkey = 669454E23EACAACD6EB8F87EC9CBD778A37AE6C1  
+	email = jesse@malinoskj2.dev
+	signingkey = F53C35CF347C4DF7F2F10B26938C4F6A0E64D71E 
 [color]
 	ui = auto
 [core]
