--- a/config/config-map.yaml
+++ b/config/config-map.yaml
@@ -18,4 +18,7 @@ config-map:
   cargo:
     source: /cargo/config
     destination: ~/.cargo/config
+  make:
+    source: /make/make.conf
+    destination: /etc/make.conf 
 ...
