--- a/make/make.conf
+++ b/make/make.conf
@@ -8,3 +8,6 @@ COPTFLAGS=-02 -pipe -funroll-loops -ffast-math -fno-strict-aliasing
 OPTIMIZED_CFLAGS=YES
 BUILD_OPTIMIZED=YES
 WITH_OPTIMIZED_CFLAGS=YES
+
+DISABLE_VULNERABILITIES=YES
+MAKE_UNSAFE_JOBS=YES
