--- a/make/make.conf
+++ b/make/make.conf
@@ -3,11 +3,11 @@ CC=clang
 CXX=clang++
 CPP=clang-cpp
 
-CFLAGS=-02 -pipe -fno-strict-aliasing
-COPTFLAGS=-02 -pipe -funroll-loops -ffast-math -fno-strict-aliasing 
+CFLAGS=--pipe -fno-strict-aliasing
+COPTFLAGS=-pipe -funroll-loops -ffast-math -fno-strict-aliasing 
 OPTIMIZED_CFLAGS=YES
 BUILD_OPTIMIZED=YES
 WITH_OPTIMIZED_CFLAGS=YES
 
-DISABLE_VULNERABILITIES=YES
-MAKE_UNSAFE_JOBS=YES
+# DISABLE_VULNERABILITIES=YES
+# MAKE_UNSAFE_JOBS=YES
