--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "zsh/mod/prompt_j2"]
 	path = zsh/mod/prompt_j2
 	url = https://github.com/malinoskj2/prompt_j2
+[submodule "zsh/mod/enhanced"]
+	path = zsh/mod/enhanced
+	url = https://github.com/b4b4r07/enhancd
