--- a/config/git/.gitconfig
+++ b/config/git/.gitconfig
@@ -2,17 +2,32 @@
 	name = Jesse Malinosky
 	email = jesse@malinoskj2.dev
 	signingkey = F53C35CF347C4DF7F2F10B26938C4F6A0E64D71E 
+
 [color]
 	ui = auto
+
+[apply]
+	# Detect whitespace errors when applying a patch
+	whitespace = fix
+
 [core]
 	editor = vim
 	pager = more
 	autocrlf = false
+
 [merge]
 	ff = yes
+
 [commit]
 	gpgsign = false
+
 [gpg]
 	program = gpg2
+
 [credential]
 	helper = cache --timeout 21600
+
+[diff]
+	# Detect copies as well as renames
+	renames = copies
+
