switch fuzzy finder

--- a/package/pkg.yaml
+++ b/package/pkg.yaml
@@ -37,7 +37,7 @@
 - name: fusefs-ntfs
 - name: exa
 - name: intellij-ultimate
-- name: fzy
+- name: fzf
 - name: hs-pandoc
 - name: intellij-fsnotifier
 - name: intellij-pty4j
