--- a/sys/home/config-map.yaml
+++ b/sys/home/config-map.yaml
@@ -2,28 +2,27 @@
 # Maps location of config file in repo to expected location
 # source is relative to root of repo
 #
-make:
-  source: /sys/home/etc/make.conf
-  destination: /etc/make.conf 
-  method: copy
-devfs:
-  source: /sys/home/etc/devfs.conf
-  destination: /etc/devfs.conf 
-  method: copy
-fstab:
-  source: /sys/home/etc/fstab
-  destination: /etc/fstab 
-  method: copy
-sysctl:
-  source: /sys/home/etc/sysctl.conf
-  destination: /etc/sysctl.conf 
-  method: copy
-rc:
-  source: /sys/home/etc/rc.conf
-  destination: /etc/rc.conf 
-  method: copy
-loader:
-  source: /sys/home/boot/loader.conf
-  destination: /boot/loader.conf 
-  method: copy
+
+tags:
+  - "home"
+
+links:
+  - source: /usr/home/jesse/env/sys/home/etc/make.conf
+    destination: /etc/make.conf 
+    method: copy
+  - source: /usr/home/jesse/env/sys/home/etc/devfs.conf
+    destination: /etc/devfs.conf 
+    method: copy
+  - source: /usr/home/jesse/env/sys/home/etc/fstab
+    destination: /etc/fstab 
+    method: copy
+  - source: /usr/home/jesse/env/sys/home/etc/sysctl.conf
+    destination: /etc/sysctl.conf 
+    method: copy
+  - source: /usr/home/jesse/env/sys/home/etc/rc.conf
+    destination: /etc/rc.conf 
+    method: copy
+  - source: /usr/home/jesse/env/sys/home/boot/loader.conf
+    destination: /boot/loader.conf 
+    method: copy
 ...
