--- a/sys/katana/config-map.yaml
+++ b/sys/katana/config-map.yaml
@@ -2,20 +2,21 @@
 # Maps location of config file in repo to expected location
 # source is relative to root of repo
 #
-fstab:
-  source: /sys/katana/etc/fstab
-  destination: /etc/fstab 
-  method: copy
-sysctl:
-  source: /sys/katana/etc/sysctl.conf
-  destination: /etc/sysctl.conf 
-  method: copy
-rc:
-  source: /sys/katana/etc/rc.conf
-  destination: /etc/rc.conf 
-  method: copy
-loader:
-  source: /sys/katana/boot/loader.conf
-  destination: /boot/loader.conf 
-  method: copy
+
+tags:
+  - "katana"
+  - "laptop"
+links:
+  - source: /usr/home/jesse/env/sys/katana/etc/fstab
+    destination: /etc/fstab 
+    method: copy
+  - source: /usr/home/jesse/env/sys/katana/etc/sysctl.conf
+    destination: /etc/sysctl.conf 
+    method: copy
+  - source: /usr/home/jesse/env/sys/katana/etc/rc.conf
+    destination: /etc/rc.conf 
+    method: copy
+  - source: /usr/home/jesse/env/sys/katana/boot/loader.conf
+    destination: /boot/loader.conf 
+    method: copy
 ...
