update system config

--- a/sys/home/boot/loader.conf
+++ b/sys/home/boot/loader.conf
@@ -6,7 +6,7 @@ kern.geom.label.gptid.enable="0"
 # load sound driver
 snd_hda_load="YES"
 
-# load zfs kerlen module
+# load zfs kern module
 zfs_load="YES"
 
 # load linux compat kernel module
@@ -14,6 +14,10 @@ linux_load="YES"
 
 # load virtualbox kernel module
 vboxdrv_load="YES"
+
+# for bhyve
+# # vmm_load="YES"
+
 
 # kldstat -v | grep -i aio
 # Increased limits for vbox
