--- a/sys/home/etc/rc.conf
+++ b/sys/home/etc/rc.conf
@@ -1,11 +1,15 @@
 # Jesse's rc.conf
 
 # network
-ifconfig_re0="DHCP"
-ifconfig_re0_ipv6="inet6 accept_rtadv"
+# ifconfig_re0="DHCP"
+# ifconfig_re0_ipv6="inet6 accept_rtadv"
+defaultrouter="10.0.0.1"
+ifconfig_re0="inet 10.0.0.34 netmask 0xffffff00 broadcast 10.0.0.255"
 
 ntpdate_enable="YES"
 ntpd_enable="YES"
+
+harvest_mask="351" # stop harvesting for random from network
 
 # firewall
 firewall_enable="YES"
@@ -35,9 +39,10 @@ syslogd_flags="-ss"
 dumpdev="NO"
 sendmail_enable="NONE"
 
-# graphics
-kld_list="nvidia nvidia-modeset"
 
 # virtualbox
 vboxnet_enable="YES"
 
+# kernel mods 
+# kld_list="aesni coretemp vmm nmdm if_tap if_bridge bridgestp nvidia nvidia-modeset"
+kld_list="aesni coretemp nvidia nvidia-modeset"
