--- a/sys/home/etc/sysctl.conf
+++ b/sys/home/etc/sysctl.conf
@@ -4,9 +4,12 @@
 vfs.zfs.min_auto_ashift=12
 
 # Set default audio device
-# hw.snd.default_unit=7 
+hw.snd.default_unit=7
 
 # secruity
 # security.bsd.see_other_uids=0
 security.bsd.unprivileged_read_msgbuf=0
 security.bsd.unprivileged_proc_debug=0
+
+# net
+net.inet.ip.forwarding=1
