Add alias to update remotes

--- a/config/git/.gitconfig
+++ b/config/git/.gitconfig
@@ -6,6 +6,7 @@
 [alias]
 	pom = push origin master
 	cloners = clone --recurse-submodules
+	ruop = remote update origin --prune
 
 [color]
 	ui = auto
