update some system files

--- a/sys/home/etc/rc.conf
+++ b/sys/home/etc/rc.conf
@@ -1,10 +1,9 @@
 # Jesse's rc.conf
 
 # network
-# ifconfig_re0="DHCP"
-# ifconfig_re0_ipv6="inet6 accept_rtadv"
 defaultrouter="10.0.0.1"
 ifconfig_re0="inet 10.0.0.34 netmask 0xffffff00 broadcast 10.0.0.255"
+gateway_enable="YES"
 
 ntpdate_enable="YES"
 ntpd_enable="YES"
@@ -16,9 +15,6 @@ firewall_enable="YES"
 firewall_type="workstation"
 firewall_logdeny="YES"
 firewall_logging="YES"
-
-# sound
-mixer_enable="YES"
 
 # compat
 linux_enable="YES"
@@ -39,10 +35,11 @@ syslogd_flags="-ss"
 dumpdev="NO"
 sendmail_enable="NONE"
 
-
-# virtualbox
-vboxnet_enable="YES"
+# bhyve 
+vm_enable="YES"
+vm_dir="zfs:zroot/vm"
+vm_list="ubuntu"
+vm_delay="60"
 
 # kernel mods 
-# kld_list="aesni coretemp vmm nmdm if_tap if_bridge bridgestp nvidia nvidia-modeset"
-kld_list="aesni coretemp nvidia nvidia-modeset"
+kld_list="aesni coretemp vmm nmdm if_tap if_bridge bridgestp nvidia nvidia-modeset"
