--- a/sys/home/etc/pf.conf
+++ b/sys/home/etc/pf.conf
@@ -20,8 +20,13 @@ set skip on lo0
 # reassemble
 scrub in on $ext_if all fragment reassemble
 
+# NAT
+nat on re0 from {10.34.34.1/24} to any -> (re0)
+
 # Default deny
 block in log all
+
+pass in on vm-public
 
 # Allow outgoing connections
 pass out quick modulate state
@@ -29,14 +34,6 @@ pass out quick modulate state
 # antispoof
 antispoof for $ext_if inet
 
-# Allow services in 
-# pass in on $ext_if inet proto tcp from any to any port $tcp_services $tcp_state
-# pass in on $ext_if inet6 proto tcp from any to any port $tcp_services $tcp_state
-# pass in on $ext_if inet proto udp from any to any port $udp_services $udp_state
-# pass in on $ext_if inet6 proto udp from any to any port $udp_services $udp_state
-
-
 # Allow ICMP
 pass inet proto icmp all icmp-type $icmp_types keep state
 pass inet6 proto icmp6 all icmp6-type $icmp6_types keep state
-
