--- a/sys/home/etc/rc.conf
+++ b/sys/home/etc/rc.conf
@@ -10,12 +10,13 @@ ntpd_enable="YES"
 
 harvest_mask="351" # stop harvesting for random from network
 
-# firewall
-firewall_enable="YES"
-firewall_type="workstation"
-firewall_logdeny="YES"
-firewall_logging="YES"
+dnsmasq_enable="YES"
 
+# firewall
+pf_enable="YES"
+pf_rules="/etc/pf.conf"
+pflog_enable="NO"
+pflog_logfile="/var/log/pflog"
 # compat
 linux_enable="YES"
 
@@ -38,8 +39,10 @@ sendmail_enable="NONE"
 # bhyve 
 vm_enable="YES"
 vm_dir="zfs:zroot/vm"
-vm_list="ubuntu"
+vm_list="ubuntu3"
 vm_delay="60"
 
 # kernel mods 
 kld_list="aesni coretemp vmm nmdm if_tap if_bridge bridgestp nvidia nvidia-modeset"
+
+
