--- a/sys/home/etc/sysctl.conf
+++ b/sys/home/etc/sysctl.conf
@@ -14,8 +14,8 @@ security.bsd.unprivileged_proc_debug=0
 
 # net
 
-net.link.tap.up_on_open=1
-net.inet.ip.fw.one_pass=0
+# net.link.tap.up_on_open=1
+# net.inet.ip.fw.one_pass=0
 net.inet.ip.forwarding=1
-net.inet6.ip6.forwarding=1
+# net.inet6.ip6.forwarding=1
 net.link.bridge.ipfw=1
