--- a/sys/home/etc/make.conf
+++ b/sys/home/etc/make.conf
@@ -11,3 +11,5 @@ WITH_OPTIMIZED_CFLAGS=YES
 
 # DISABLE_VULNERABILITIES=YES
 # MAKE_UNSAFE_JOBS=YES
+DEFAULT_VERSIONS+= python3=3.5
+USE_PYTHON=	3.7	
