--- a/sys/home/etc/pf.conf
+++ b/sys/home/etc/pf.conf
@@ -21,12 +21,13 @@ set skip on lo0
 scrub in on $ext_if all fragment reassemble
 
 # NAT
-nat on re0 from {10.34.34.1/24} to any -> (re0)
+nat on re0 from {10.34.34.0/24} to any -> (re0)
 
 # Default deny
 block in log all
 
 pass in on vm-public
+pass out on vm-public
 
 # Allow outgoing connections
 pass out quick modulate state
