--- a/config/alacritty/alacritty.yml
+++ b/config/alacritty/alacritty.yml
@@ -168,8 +168,8 @@ colors:
     red:     '0xC40233'
     green:   '0x009F6B'
     yellow:  '0xFFD700'
-    blue:    '0x0087BD'
-    magenta: '0x9A4EAE'
+    blue:    '0x3277BA'
+    magenta: '0xFF6663'
     cyan:    '0x20B2AA'
     white:   '0xC6C6C4'
 
