Setup ipv6 + cleanup firewall rules
- ntpd kept throwing errors because ipv6 wasnt configd.

--- a/sys/home/etc/pf.conf
+++ b/sys/home/etc/pf.conf
@@ -2,18 +2,12 @@
 
 ext_if="re0"
 
-tcp_pass = "{ 123 631 }" 
-udp_pass = "{ 110 631 }"
-
 icmp_types = "{echoreq, unreach}"
 icmp6_types= "{echoreq, unreach, 133, 134, 135, 136, 137}"
 
-service = "{ 22 2375 3306 }" 	# ssh docker mysql
-web = "{ 53 443 80 }" 		# dns/http(s)
-dev = "{ 34 }" 			# misc misc 
-
 # Drop 
 set block-policy drop
+
 # Dont Filter local
 set skip on lo0 
 
@@ -21,7 +15,7 @@ set skip on lo0
 scrub in on $ext_if all fragment reassemble
 
 # NAT
-nat on re0 from {10.34.34.0/24} to any -> (re0)
+nat on $ext_if from {10.34.34.10/24} to any -> (re0)
 
 # Default deny
 block in log all
