--- a/sys/home/etc/rc.conf
+++ b/sys/home/etc/rc.conf
@@ -1,14 +1,15 @@
 # Jesse's rc.conf
 
 # network
+# ip v4
 defaultrouter="10.0.0.1"
 ifconfig_re0="inet 10.0.0.34 netmask 0xffffff00 broadcast 10.0.0.255"
 gateway_enable="YES"
 
-ntpdate_enable="YES"
-ntpd_enable="YES"
-
-harvest_mask="351" # stop harvesting for random from network
+#ip v6
+ipv6_activate_all_interfaces="YES"
+ipv6_defaultrouter="fe80:0:0:0:1256:11ff:fe96:b022"
+ifconfig_re0_ipv6="inet6 2601:80:8400:2960:0:0:0:0034 prefixlen 64"
 
 dnsmasq_enable="YES"
 
@@ -17,11 +18,19 @@ pf_enable="YES"
 pf_rules="/etc/pf.conf"
 pflog_enable="NO"
 pflog_logfile="/var/log/pflog"
+
+# Time
+ntpdate_enable="NO"
+ntpd_enable="YES"
+
+harvest_mask="351" # stop harvesting for random from network
+
 # compat
 linux_enable="YES"
 
 # fs
 zfs_enable="YES"
+devfs_system_ruleset="system"
 
 # power
 powerd_enable="YES"
@@ -30,6 +39,8 @@ powerd_enable="YES"
 hostname="home"
 clear_tmp_enable="YES"
 dbus_enable="YES"
+update_motd="NO"
+virecover_enable="NO"
 
 # logging 
 syslogd_flags="-ss"
