--- a/sys/home/etc/rc.conf
+++ b/sys/home/etc/rc.conf
@@ -11,19 +11,19 @@ ipv6_activate_all_interfaces="YES"
 ipv6_defaultrouter="fe80:0:0:0:1256:11ff:fe96:b022"
 ifconfig_re0_ipv6="inet6 2601:80:8400:2960:0:0:0:0034 prefixlen 64"
 
-dnsmasq_enable="YES"
-
 # firewall
 pf_enable="YES"
 pf_rules="/etc/pf.conf"
 pflog_enable="NO"
 pflog_logfile="/var/log/pflog"
 
+# Misc
+dnsmasq_enable="YES"
+harvest_mask="351" # stop harvesting for random from network
+
 # Time
 ntpdate_enable="NO"
 ntpd_enable="YES"
-
-harvest_mask="351" # stop harvesting for random from network
 
 # compat
 linux_enable="YES"
@@ -41,11 +41,16 @@ clear_tmp_enable="YES"
 dbus_enable="YES"
 update_motd="NO"
 virecover_enable="NO"
+moused_enable="NO"
+moused_nondefault_enable="NO"
 
 # logging 
 syslogd_flags="-ss"
 dumpdev="NO"
 sendmail_enable="NONE"
+sendmail_msp_queue_enable="NO"
+sendmail_outbound_enable="NO"
+sendmail_submit_enable="NO"
 
 # bhyve 
 vm_enable="YES"
@@ -55,5 +60,4 @@ vm_delay="60"
 
 # kernel mods 
 kld_list="aesni coretemp vmm nmdm if_tap if_bridge bridgestp nvidia nvidia-modeset"
-
 
