--- a/config/alacritty/alacritty.yml
+++ b/config/alacritty/alacritty.yml
@@ -419,8 +419,8 @@ key_bindings:
   - { key: Down,     mods: Alt,     chars: "\x1b[1;3B"                   }
   - { key: Down,                    chars: "\x1b[B",   mode: ~AppCursor  }
   - { key: Down,                    chars: "\x1bOB",   mode: AppCursor   }
-  - { key: F1,                      chars: "\x1bOP"                      }
-  - { key: F2,                      chars: "\x1bOQ"                      }
+  - { key: F1,                      action: "ScrollPageUp"               }
+  - { key: F2,                      action: "ScrollPageDown"             }
   - { key: F3,                      chars: "\x1bOR"                      }
   - { key: F4,                      chars: "\x1bOS"                      }
   - { key: F5,                      chars: "\x1b[15~"                    }
