--- a/config/alacritty/alacritty.yml
+++ b/config/alacritty/alacritty.yml
@@ -137,7 +137,7 @@ draw_bold_text_with_bright_colors: true
 colors:
   # Default colors
   primary:
-    background: '0x000000'
+    background: '0x0d0c0f'
     foreground: '0xffffff'
 
     # Bright and dim foreground colors
