--- a/config/polybar/config
+++ b/config/polybar/config
@@ -1,60 +1,74 @@
 [bar/mybar]
-modules-right = date
-modules-left = bspwm
+modules-left = bspwm 
 
 bottom = true
-padding = 4
-height = 30
+width = 7.5%
+padding = 2
+height = 27
+offset-x = 6
+offset-y = 6
 
-font-0 = Lato:size=10
-border-color = ${xrdb:color0}
-border-top-size = 2
+;font-0 = "Fira Mono:size=10;2"
+font-0 = NotoSans-Regular:size=8;10
+font-1 = Unifont:size=6;3
+font-2 = FontAwesome:size=10;2
+font-3 = NotoSans-Regular:size=8;-1
+font-4 = MaterialIcons:size=10;-1
+font-5 = Termsynu:size=8;-1
 
-[module/date]
-type = internal/date
-date = %I:%M
-interval = 60.0
+background = #222127
 
-label-padding-top = 40
-label-padding-left = 8
+locale = en_US.UTF-8
+
+line-size = 4
 
 [module/bspwm]
 type = internal/bspwm
 
-; Only show workspaces defined on the same output as the bar
-; NOTE: The bspwm and XRandR monitor names must match, which they do by default.
-; Default: true
 pin-workspaces = true
 
-; Output mode flags after focused state label
-; Default: false
-inline-mode = false
-
-; Create click handler used to focus workspace
-; Default: true
+;inline-mode = false
 enable-click = true
-
-; Create scroll handlers used to cycle workspaces
-; Default: true
 enable-scroll = false
-
-; Set the scroll cycle direction 
-; Default: true
 reverse-scroll = false
-
-; Use fuzzy (partial) matching on labels when assigning 
-; icons to workspaces
-; Example: code;♚ will apply the icon to all workspaces 
-; containing 'code' in the label
-; Default: false
 fuzzy-match = true
 
-; formatting
-label-focused-foreground = ${xrdb:color0}
-label-focused-underline = ${xrdb:color0}
-label-unfocused-underline = #00a0e5 
-
+ws-icon-0 = a;
+ws-icon-1 = b;
+ws-icon-2 = c;
 
 ; formatting
-label-separator = \ 
-label-separator-padding = 4
+format = <label-state> <label-mode>
+
+label-active = %icon%
+label-active-foreground = #fff
+;label-active-background = #e21645
+;label-active-underline = #b72e4d
+label-active-overline = #ff6663
+label-active-font = 4
+label-active-padding = 4
+label-active-margin = 1
+
+label-occupied = %icon%
+label-occupied-padding = 4
+label-occupied-margin = 1
+;label-occupied-foreground = #dd
+;label-occupied-background = #636a78
+;label-occupied-underline = #666
+;label-occupied-font = 4
+;label-occupied-padding = 4
+;label-occupied-margin = 1
+
+label-urgent = %icon%
+label-urgent-padding = 4
+label-urgent-margin = 1
+;label-urgent-foreground = #000000
+;label-urgent-background = #bd2c40
+;label-urgent-underline = #9b0a20
+;label-urgent-font = 4
+;label-urgent-padding = 4
+;label-urgent-margin = 1
+
+label-empty = %icon%
+label-empty-padding = 4
+label-empty-margin = 1
