--- a/config/polybar/config
+++ b/config/polybar/config
@@ -1,60 +1,43 @@
 [bar/mybar]
-modules-right = date
-modules-left = bspwm
+modules-left = bspwm 
 
 bottom = true
-padding = 4
-height = 30
+width = 5%
+;padding = 0.6
+height = 27
+offset-x = 6
+offset-y = 6
 
-font-0 = Lato:size=10
-border-color = ${xrdb:color0}
-border-top-size = 2
+font-0 = "Fira Mono:size=10;2"
 
-[module/date]
-type = internal/date
-date = %I:%M
-interval = 60.0
-
-label-padding-top = 40
-label-padding-left = 8
+background = #222127
 
 [module/bspwm]
 type = internal/bspwm
 
-; Only show workspaces defined on the same output as the bar
-; NOTE: The bspwm and XRandR monitor names must match, which they do by default.
-; Default: true
 pin-workspaces = true
 
-; Output mode flags after focused state label
-; Default: false
-inline-mode = false
-
-; Create click handler used to focus workspace
-; Default: true
+;inline-mode = false
 enable-click = true
-
-; Create scroll handlers used to cycle workspaces
-; Default: true
 enable-scroll = false
-
-; Set the scroll cycle direction 
-; Default: true
 reverse-scroll = false
-
-; Use fuzzy (partial) matching on labels when assigning 
-; icons to workspaces
-; Example: code;♚ will apply the icon to all workspaces 
-; containing 'code' in the label
-; Default: false
 fuzzy-match = true
 
 ; formatting
-label-focused-foreground = ${xrdb:color0}
-label-focused-underline = ${xrdb:color0}
-label-unfocused-underline = #00a0e5 
+format = <label-state> <label-mode>
 
+label-focused = %name%
+label-unfocused = %name%
+label-visible = %name
+label-urgent = %name%
+label-mode = %mode%
+
+label-active-font = 0
+label-focused-foreground = ${xrdb:color0}
+label-indicator-underline = #FF0000
+label-focused-underline = #FF0000
 
 ; formatting
-label-separator = \ 
-label-separator-padding = 4
+label-separator = " "
+label-separator-padding = 0
+
