--- a/sys/home/etc/rc.conf
+++ b/sys/home/etc/rc.conf
@@ -60,7 +60,10 @@ vm_delay="60"
 
 # kernel mods 
 # kld_list="aesni coretemp vmm nmdm if_tap if_bridge bridgestp nvidia nvidia-modeset"
-kld_list="aesni coretemp if_tap if_bridge bridgestp nvidia nvidia-modeset"
+# kld_list="aesni coretemp if_tap if_bridge bridgestp nvidia nvidia-modeset"
+kld_list="aesni coretemp if_tap nvidia nvidia-modeset"
+
+# virtualbox networking
 vboxnet_enable="YES"
 
 # openvpn
