--- a/sys/home/boot/loader.conf
+++ b/sys/home/boot/loader.conf
@@ -3,13 +3,13 @@ kern.geom.label.disk_ident.enable="0"
 kern.geom.label.gptid.enable="0"
 
 # load sound driver
-snd_hda_load="YES"
+# snd_hda_load="YES"
 
 # load zfs kern module
-zfs_load="YES"
+# zfs_load="YES"
 
 # load linux compat kernel module
-linux_load="YES"
+# linux_load="YES"
 
 vfs.aio.max_buf_aio=8192
 vfs.aio.max_aio_queue_per_proc=65536
