--- a/sys/home/etc/rc.conf
+++ b/sys/home/etc/rc.conf
@@ -12,7 +12,7 @@ ipv6_defaultrouter="fe80:0:0:0:1256:11ff:fe96:b022"
 ifconfig_re0_ipv6="inet6 2601:80:8400:2960:0:0:0:0034 prefixlen 64"
 
 # firewall
-pf_enable="YES"
+# pf_enable="YES"
 pf_rules="/etc/pf.conf"
 pflog_enable="NO"
 pflog_logfile="/var/log/pflog"
@@ -26,7 +26,7 @@ ntpdate_enable="NO"
 ntpd_enable="YES"
 
 # compat
-linux_enable="YES"
+# linux_enable="YES"
 
 # fs
 zfs_enable="YES"
@@ -61,7 +61,8 @@ vm_delay="60"
 # kernel mods 
 # kld_list="aesni coretemp vmm nmdm if_tap if_bridge bridgestp nvidia nvidia-modeset"
 # kld_list="aesni coretemp if_tap if_bridge bridgestp nvidia nvidia-modeset"
-kld_list="aesni coretemp if_tap nvidia nvidia-modeset"
+# kld_list="aesni coretemp if_tap nvidia nvidia-modeset"
+kld_list="nvidia nvidia-modeset"
 
 # virtualbox networking
 vboxnet_enable="YES"
