--- a/config/mpd/musicpd.conf
+++ b/config/mpd/musicpd.conf
@@ -15,7 +15,8 @@ group			"jesse"
 
 # tcp 
 # can be read from MPD_HOST //
-bind_to_address         "localhost"
+# bind_to_address         "localhost"
+bind_to_address         "~/resource/mpd/socket"
 port			"6600"
 
 # audio
