--- a/config/polybar/config
+++ b/config/polybar/config
@@ -18,8 +18,8 @@ font-5 = Termsynu:size=8;-1
 
 ;background = #4FCED5
 background = #389CB3
-background-radius = 3
-radius = 3
+;background-radius = 3
+;radius = 3
 
 locale = en_US.UTF-8
 
