--- a/config/alacritty/alacritty.yml
+++ b/config/alacritty/alacritty.yml
@@ -26,8 +26,8 @@ window:
   # Blank space added around the window in pixels. This padding is scaled
   # by DPI and the specified value is always added at both opposing sides.
   padding:
-    x: 2
-    y: 2
+    x: 13
+    y: 13
 
   # Spread additional padding evenly around the terminal content.
   dynamic_padding: false
@@ -37,7 +37,7 @@ window:
   # Values for `decorations`:
   #     - full: Borders and title bar
   #     - none: Neither borders nor title bar
-  decorations: full
+  decorations: none
 
   # When true, alacritty starts maximized.
   start_maximized: false
@@ -137,7 +137,9 @@ draw_bold_text_with_bright_colors: true
 colors:
   # Default colors
   primary:
-    background: '0x0d0c0f'
+    background: '0x2c2127'
+    #foreground: '0xfbd8c8'
+    # foreground: '0xfce2d6'
     foreground: '0xffffff'
 
     # Bright and dim foreground colors
@@ -213,7 +215,7 @@ visual_bell:
 #
 # Window opacity as a floating point number from `0.0` to `1.0`.
 # The value `0.0` is completely transparent and `1.0` is opaque.
-background_opacity: 1.0
+background_opacity: 0.65
 
 # Mouse bindings
 #
