--- a/config/mpd/musicpd.conf
+++ b/config/mpd/musicpd.conf
@@ -16,7 +16,7 @@ group			"jesse"
 # tcp 
 # can be read from MPD_HOST //
 # bind_to_address         "localhost"
-bind_to_address         "~/resource/mpd/socket"
+bind_to_address         "/tmp/mpd-socket"
 port			"6600"
 
 # audio
