--- a/config/ncmpcpp/config
+++ b/config/ncmpcpp/config
@@ -5,3 +5,11 @@ mpd_host = "/tmp/mpd-socket"
 mpd_music_dir = "/disk/media/Music"
 mpd_connection_timeout = "5"
 mpd_crossfade_time = "5"
+
+# misc
+playlist_show_mpd_host = yes
+
+## Screens available for use: help, playlist, browser, search_engine,
+## media_library, playlist_editor, tag_editor, outputs, visualizer, clock,
+## lyrics, last_fm.
+startup_screen = playlist_editor
