--- a/config/compton/compton.conf
+++ b/config/compton/compton.conf
@@ -87,6 +87,16 @@ utility       = { shadow = false; };
 shadow-ignore-shaped = false;
 
 #################################
+# Blur
+#################################
+blur-background = true;
+blur-background-frame = true;
+# blur-background-fixed = true;
+blur-kern = "3x3box";
+blur-method = "kawase";
+blur-strength = 6;
+
+#################################
 # Other
 #################################
 
