--- a/config/compton/compton.conf
+++ b/config/compton/compton.conf
@@ -89,12 +89,12 @@ shadow-ignore-shaped = false;
 #################################
 # Blur
 #################################
-blur-background = true;
-blur-background-frame = true;
-# blur-background-fixed = true;
-blur-kern = "3x3box";
-blur-method = "kawase";
-blur-strength = 6;
+# blur-background = false;
+# blur-background-frame = false;
+# blur-background-fixed = false;
+# blur-kern = "3x3box";
+# blur-method = "kawase";
+# blur-strength = 6;
 
 #################################
 # Other
