--- a/config/links.yaml
+++ b/config/links.yaml
@@ -7,34 +7,34 @@ tags:
   - "dot"
 
 links: 
-  - source: /usr/home/jesse/env/config/x11/xinitrc 
-    link: /usr/home/jesse/.xinitrc
-  - source: /usr/home/jesse/env/zsh/zshrc
-    link: /usr/home/jesse/.zshrc 
-  - source: /usr/home/jesse/env/zsh/zlogin
-    link: /usr/home/jesse/.zlogin
-  - source: /usr/home/jesse/env/config/alacritty/alacritty.yml 
-    link: /usr/home/jesse/.config/alacritty.yml
-  - source: /usr/home/jesse/env/config/git/gitconfig
-    link: /usr/home/jesse/.gitconfig   
-  - source: /usr/home/jesse/env/config/npm/.npmrc
-    link: /usr/home/jesse/.npmrc
-  - source: /usr/home/jesse/env/config/aws/config
-    link: /usr/home/jesse/.aws/config
-  - source: /usr/home/jesse/env/config/bspwm/bspwmrc
-    link: /usr/home/jesse/.config/bspwm/bspwmrc
-  - source: /usr/home/jesse/env/config/sxhkd/sxhkdrc
-    link: /usr/home/jesse/.config/sxhkd/sxhkdrc
-  - source: /usr/home/jesse/env/config/x11/Xresources
-    link: /usr/home/jesse/.Xresources
-  - source: /usr/home/jesse/env/config/idea/idea.properties
-    link: /usr/home/jesse/.IntelliJIdea2019.1/config/idea.properties
-  - source: /usr/home/jesse/env/config/compton/compton.conf
-    link: /usr/home/jesse/.config/compton.conf
-  - source: /usr/home/jesse/env/config/rofi/j2.rasi
-    link: /usr/home/jesse/.config/rofi/j2.rasi
-  - source: /usr/home/jesse/env/config/ncmpcpp/config
-    link: /usr/home/jesse/.ncmpcpp/config
-  - source: /usr/home/jesse/env/config/vim/vimrc
-    link: /usr/home/jesse/.vimrc
+  - source: /home/jesse/env/config/x11/xinitrc 
+    link: /home/jesse/.xinitrc
+  - source: /home/jesse/env/zsh/zshrc
+    link: /home/jesse/.zshrc 
+  - source: /home/jesse/env/zsh/zlogin
+    link: /home/jesse/.zlogin
+  - source: /home/jesse/env/config/alacritty/alacritty.yml 
+    link: /home/jesse/.config/alacritty.yml
+  - source: /home/jesse/env/config/git/gitconfig
+    link: /home/jesse/.gitconfig   
+  - source: /home/jesse/env/config/npm/.npmrc
+    link: /home/jesse/.npmrc
+  - source: /home/jesse/env/config/aws/config
+    link: /home/jesse/.aws/config
+  - source: /home/jesse/env/config/bspwm/bspwmrc
+    link: /home/jesse/.config/bspwm/bspwmrc
+  - source: /home/jesse/env/config/sxhkd/sxhkdrc
+    link: /home/jesse/.config/sxhkd/sxhkdrc
+  - source: /home/jesse/env/config/x11/Xresources
+    link: /home/jesse/.Xresources
+  - source: /home/jesse/env/config/idea/idea.properties
+    link: /home/jesse/.IntelliJIdea2019.1/config/idea.properties
+  - source: /home/jesse/env/config/compton/compton.conf
+    link: /home/jesse/.config/compton.conf
+  - source: /home/jesse/env/config/rofi/j2.rasi
+    link: /home/jesse/.config/rofi/j2.rasi
+  - source: /home/jesse/env/config/ncmpcpp/config
+    link: /home/jesse/.ncmpcpp/config
+  - source: /home/jesse/env/config/vim/vimrc
+    link: /home/jesse/.vimrc
 ...
