--- a/config/alacritty/alacritty.yml
+++ b/config/alacritty/alacritty.yml
@@ -137,9 +137,7 @@ draw_bold_text_with_bright_colors: true
 colors:
   # Default colors
   primary:
-    background: '0x2c2127'
-    #foreground: '0xfbd8c8'
-    # foreground: '0xfce2d6'
+    background: '0x2C001E'
     foreground: '0xffffff'
 
     # Bright and dim foreground colors
@@ -215,7 +213,7 @@ visual_bell:
 #
 # Window opacity as a floating point number from `0.0` to `1.0`.
 # The value `0.0` is completely transparent and `1.0` is opaque.
-background_opacity: 0.99
+background_opacity: 1.0
 
 # Mouse bindings
 #
