--- a/config/alacritty/alacritty.yml
+++ b/config/alacritty/alacritty.yml
@@ -137,7 +137,7 @@ draw_bold_text_with_bright_colors: true
 colors:
   # Default colors
   primary:
-    background: '0x202020'
+    background: '0x111F1E'
     foreground: '0xffffff'
 
     # Bright and dim foreground colors
