--- a/config/compton/compton.conf
+++ b/config/compton/compton.conf
@@ -47,15 +47,15 @@ shadow = true;
 # Don't draw shadows on DND windows.
 no-dnd-shadow = true;
 # Avoid drawing shadows on dock/panel windows.
-no-dock-shadow = true;
+# no-dock-shadow = true;
 # Zero the part of the shadow's mask behind the window. Fix some weirdness with ARGB windows.
 clear-shadow = true;
 # The blur radius for shadows. (default 12)
 shadow-radius = 5;
 # The left offset for shadows. (default -15)
-shadow-offset-x = 1;
+shadow-offset-x = 0;
 # The top offset for shadows. (default -15)
-shadow-offset-y = 2;
+shadow-offset-y = -9;
 # The translucency for shadows. (default .75)
 shadow-opacity = 0.94;
 
