--- a/config/compton/compton.conf
+++ b/config/compton/compton.conf
@@ -51,13 +51,13 @@ no-dnd-shadow = true;
 # Zero the part of the shadow's mask behind the window. Fix some weirdness with ARGB windows.
 clear-shadow = true;
 # The blur radius for shadows. (default 12)
-shadow-radius = 5;
+shadow-radius = 6;
 # The left offset for shadows. (default -15)
-shadow-offset-x = 0;
+shadow-offset-x = -9;
 # The top offset for shadows. (default -15)
-shadow-offset-y = -9;
+shadow-offset-y = -5;
 # The translucency for shadows. (default .75)
-shadow-opacity = 0.94;
+shadow-opacity = 0.96;
 
 # Set if you want different colour shadows
 shadow-red = 0.1;
@@ -152,3 +152,6 @@ detect-transient = true;
 # Use WM_CLIENT_LEADER to group windows, and consider windows in the same group focused at the same time.
 # WM_TRANSIENT_FOR has higher priority if --detect-transient is enabled, too.
 detect-client-leader = true;
+
+## 
+# opacity-rule = [ "40:class_g = 'Gnome-terminal'" ];
