--- a/config/mpd/musicpd.conf
+++ b/config/mpd/musicpd.conf
@@ -1,7 +1,7 @@
 # mpd conf
 
 # directories
-music_directory         "/disk/media/Music"
+music_directory         "/zstorage/media/Music"
 pid_file                "~/resource/mpd/pid"
 db_file                 "~/resource/mpd/database"
 state_file              "~/resource/mpd/state"
