--- a/config/mpd/mpd.conf
+++ b/config/mpd/mpd.conf
@@ -1,7 +1,7 @@
 # mpd conf
 
 # directories
-music_directory         "/zstorage/media/Music"
+music_directory         "/disk/media/media/Music"
 pid_file                "~/resource/mpd/pid"
 db_file                 "~/resource/mpd/database"
 state_file              "~/resource/mpd/state"
@@ -10,27 +10,14 @@ log_file                "~/resource/mpd/log"
 sticker_file            "~/resource/mpd/sticker.sql"
 
 # user
-user                	"jesse"
-group			"jesse"
+user                	  "jesse"
+group			              "jesse"
 
 # tcp 
 # can be read from MPD_HOST //
 # bind_to_address         "localhost"
 bind_to_address         "/tmp/mpd-socket"
-port			"6600"
 
 # audio
-audio_output {
-type "oss"
-name "mpd"
-# device "/dev/dsp0.0" # optional
-# mixer_type "hardware" # optional
-# mixer_type "software"
-mixer_type            "disabled"
-# mixer_device "/dev/mixer" # optional
-# mixer_control "PCM" # optional
-} 
-
 # misc
-max_output_buffer_size "32000"
-# auto_update 		"yes"
+auto_update 		        "yes"
