--- a/config/alacritty/alacritty.yml
+++ b/config/alacritty/alacritty.yml
@@ -137,7 +137,7 @@ draw_bold_text_with_bright_colors: true
 colors:
   # Default colors
   primary:
-    background: '0x302f68'
+    background: '0x300a24'
     foreground: '0xffffff'
 
     # Bright and dim foreground colors
@@ -213,7 +213,7 @@ visual_bell:
 #
 # Window opacity as a floating point number from `0.0` to `1.0`.
 # The value `0.0` is completely transparent and `1.0` is opaque.
-background_opacity: 0.96
+background_opacity: 1.0
 
 # Mouse bindings
 #
