--- a/config/mpv/mpv.conf
+++ b/config/mpv/mpv.conf
@@ -1,15 +1,25 @@
 # misc
-profile=gpu-hq
+profile=opengl-hq
 scale=ewa_lanczossharp
 cscale=ewa_lanczossharp
 video-sync=display-resample
 interpolation
 tscale=oversample
 x11-bypass-compositor=yes
+shuffle
+loop-playlist
 
 # hardware accel
 hwdec=auto-copy
 hwdec-codecs=all
+
+# hdr
+tone-mapping=hable
+tone-mapping-desaturate=0.0
+target-prim=auto
+target-trc=auto
+hdr-compute-peak
+autosync=30
 
 # fonts
 osd-font='Fira Mono'
