update youtube best quality

--- a/config/mpv/mpv.conf
+++ b/config/mpv/mpv.conf
@@ -14,6 +14,9 @@ vo=gpu
 hwdec=nvdec
 hwdec-codecs=all
 
+# youtube
+ytdl-format=bestvideo[height<=?1080]+bestaudio/best
+
 # hdr
 tone-mapping=hable
 tone-mapping-desaturate=0.0
