update .npmrc email

--- a/config/npm/.npmrc
+++ b/config/npm/.npmrc
@@ -10,6 +10,6 @@ loglevel=http
 
 # Init Settings
 init.author.name=Jesse Malinosky
-init.author.email=j2@jessemalinosky.com
+init.author.email=jesse@malinoskj2.dev
 init.license=BSD-2-Clause
 init.version=0.0.1
