--- a/config/alacritty/alacritty.yml
+++ b/config/alacritty/alacritty.yml
@@ -89,19 +89,19 @@ tabspaces: 4
 font:
   # Normal (roman) font face
   normal:
-    family: "JetBrainsMonoMedium Nerd Font"
+    family: "FiraCode Nerd Font"
     # The `style` can be specified to pick a specific face.
-    #style: Regular
+    style: Medium
 
   # Bold font face
   bold:
-    family: "JetBrainsMonoMedium Nerd Font"
+    family: "FiraCode Nerd Font"
     # The `style` can be specified to pick a specific face.
     #style: Bold
 
   # Italic font face
   italic:
-    family: "JetBrainsMonoMedium Nerd Font"
+    family: "FiraCode Nerd Font"
     # The `style` can be specified to pick a specific face.
     #style: Italic
 
