--- a/config/starship/starship.toml
+++ b/config/starship/starship.toml
@@ -55,7 +55,10 @@ disabled = true
 disabled = true
 
 [git_branch]
-symbol = " "
+symbol = "➜ "
+format = "[$symbol$branch]($style) " 
+truncation_length = 7 
+truncation_symbol = "" 
 
 [git_commit]
 disabled = true
