update screenshot behavior

--- a/config/hypr/hyprland.conf
+++ b/config/hypr/hyprland.conf
@@ -168,7 +168,7 @@ bind = $mainMod, Return, exec, $terminal
 bind = $mainMod, f, exec, $browser
 bind = $mainMod, c, exec, google-chrome-stable
 bind = $mainMod, d, exec, $dbclient
-bind = $mainMod, p, exec, ~/env/script/sys/screenshot_wl save /tmp/screenshot 
+bind = $mainMod, p, exec, ~/env/script/sys/screenshot_wl
 bind = $mainMod, Q, killactive,
 
 # Move focus with mainMod + arrow keys
