--- a/config/hypr/hyprland.conf
+++ b/config/hypr/hyprland.conf
@@ -84,13 +84,15 @@ decoration {
     # https://wiki.hyprland.org/Configuring/Variables/#blur
     blur {
         enabled = true
-        size = 3
-        passes = 1
-        vibrancy = 0.1696
+        size = 3 
+        passes = 1 
+        noise = 0.025 
     }
 
     blurls = waybar
+    blurls = notification
     layerrule = blur,waybar
+    layerrule = blur,notification
 }
 
 # https://wiki.hyprland.org/Configuring/Variables/#animations
