make file picker floating

--- a/config/hypr/hyprland.conf
+++ b/config/hypr/hyprland.conf
@@ -217,6 +217,7 @@ windowrulev2 = suppressevent maximize, class:.* # You'll probably like this.
 windowrulev2 = immediate, class:^(Alacritty)$
 windowrulev2 = immediate, class:^(firefox)$
 windowrulev2 = immediate, class:^(jetbrains-datagrip)$
+windowrulev2 = float, class:^(xdg-desktop-portal-gtk)$, title:^(File Upload)$
 
 # Side Monitor
 workspace=name:side,monitor:DP-1,default:1,persistent:true, layoutopt:orientation:top
