prevent fully transparent area from being blurred

--- a/config/hypr/hyprland.conf
+++ b/config/hypr/hyprland.conf
@@ -91,8 +91,13 @@ decoration {
 
     blurls = waybar
     blurls = notification
+    
+    # Rules For Bar
     layerrule = blur,waybar
+
+    # Rules for Notifications
     layerrule = blur,notification
+    layerrule = ignorezero,notification
 }
 
 # https://wiki.hyprland.org/Configuring/Variables/#animations
