add back shadows using new sub-category

--- a/config/hypr/hyprland.conf
+++ b/config/hypr/hyprland.conf
@@ -89,6 +89,13 @@ decoration {
         noise = 0.025 
     }
 
+    shadow {
+        enabled = true
+        range = 22
+        render_power = 8
+        color = rgba(403d31cc)
+    }
+
     blurls = waybar
     blurls = notification
     
